# FairProp-Inspector

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  inspector.py  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yaml
benchmarks/: README.md  accuracy_comparison.py  latency_benchmark.py
benchmarks/datasets/: test_cases.json
docs/: training_guide.md
examples/: README.md  batch_processing.py  edge_inference.py  quickstart.py
examples/notebooks/: tutorial.ipynb
scripts/: generate_synthetic.py
src/: config.py
src/deploy/: export_onnx.py
src/generator/: generate_data.py
src/inference/: predict.py  predict_onnx.py
src/trainer/: train.py
tests/: README.md  test_data_loader.py  test_inference.py  test_training.py
